--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     var app = new Vue({
       el: '#app',
       data: {
-        message: '!!Hello World!!!!!'
+        message: '!!Hello World for test!!!'
       },
       methods: {
         reverseMessage: function () {
